// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering loading 1`] = `
<div>
  <div
    className="p-a300 p-a800--xl"
    style={
      Object {
        "paddingBottom": ".75rem",
      }
    }
  >
    <div
      className="sh sh--y"
    >
      <h1
        className="sh-title"
      >
        BOS:311 — Choose a Service
      </h1>
    </div>
    <div
      className="m-v500 t--intro"
    >
      “
      Thanos is attacking
      ”
    </div>
  </div>
  <div
    className="b b--g p-a300 p-a800--xl"
  >
    <div>
      <div
        className="t--info"
      >
        Matching your request to BOS:311 services…
      </div>
      <div
        className="p-a300 g css-rdsogp"
      >
        <div
          className="g--4 css-19eoixt"
        >
          <span
            className="css-17mox4x"
          >
            <svg
              className={
                Object {
                  "data-css-1acy7qc": "",
                }
              }
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<use xlink:href=\\"/static/img/svg/loading-icons.svg#311_icons_general_lighting_request\\" height=\\"100%\\"></use>",
                }
              }
              role="img"
            />
          </span>
        </div>
        <div
          className="g--4 css-19eoixt"
        >
          <span
            className="css-17mox4x"
          >
            <svg
              className={
                Object {
                  "data-css-1acy7qc": "",
                }
              }
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<use xlink:href=\\"/static/img/svg/loading-icons.svg#311_icons_general_lighting_request\\" height=\\"100%\\"></use>",
                }
              }
              role="img"
            />
          </span>
        </div>
        <div
          className="g--4 css-19eoixt"
        >
          <span
            className="css-17mox4x"
          >
            <svg
              className={
                Object {
                  "data-css-1acy7qc": "",
                }
              }
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<use xlink:href=\\"/static/img/svg/loading-icons.svg#311_icons_general_lighting_request\\" height=\\"100%\\"></use>",
                }
              }
              role="img"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering no description 1`] = `
<div>
  <div
    className="p-a300 p-a800--xl"
    style={
      Object {
        "paddingBottom": ".75rem",
      }
    }
  >
    <div
      className="sh sh--y"
    >
      <h1
        className="sh-title"
      >
        BOS:311 — Choose a Service
      </h1>
    </div>
    
  </div>
  <div
    className="b b--g p-a300 p-a800--xl"
  >
    <div>
      <div
        className="t--info m-v300"
      >
        We weren’t able to automatically match your request with a service. File a General Request and someone will help you out.
      </div>
      <div
        className="m-v500"
      >
        <div
          className="dr"
        >
          <a
            className="dr-h"
            href="/request/BOS311GEN"
            onClick={[Function]}
          >
            <div
              className="dr-ic"
              style={
                Object {
                  "transform": "translateY(-49%) rotateZ(-90deg)",
                }
              }
            >
              <svg
                viewBox="-2 8.5 18 25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className="dr-i"
                  d="M16 21L.5 33.2c-.6.5-1.5.4-2.2-.2-.5-.6-.4-1.6.2-2l12.6-10-12.6-10c-.6-.5-.7-1.5-.2-2s1.5-.7 2.2-.2L16 21z"
                />
              </svg>
            </div>
            <div
              className="dr-t"
            >
              General Request
            </div>
            <div
              className="dr-st"
            >
              <span
                className="t--info"
                style={
                  Object {
                    "fontStyle": "normal",
                    "textTransform": "none",
                  }
                }
              >
                
              </span>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering no suggested summaries 1`] = `
<div>
  <div
    className="p-a300 p-a800--xl"
    style={
      Object {
        "paddingBottom": ".75rem",
      }
    }
  >
    <div
      className="sh sh--y"
    >
      <h1
        className="sh-title"
      >
        BOS:311 — Choose a Service
      </h1>
    </div>
    <div
      className="m-v500 t--intro"
    >
      “
      Thanos is attacking
      ”
    </div>
  </div>
  <div
    className="b b--g p-a300 p-a800--xl"
  >
    <div>
      <div
        className="t--info m-v300"
      >
        We weren’t able to automatically match your request with a service. File a General Request and someone will help you out.
      </div>
      <div
        className="m-v500"
      >
        <div
          className="dr"
        >
          <a
            className="dr-h"
            href="/request/BOS311GEN"
            onClick={[Function]}
          >
            <div
              className="dr-ic"
              style={
                Object {
                  "transform": "translateY(-49%) rotateZ(-90deg)",
                }
              }
            >
              <svg
                viewBox="-2 8.5 18 25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className="dr-i"
                  d="M16 21L.5 33.2c-.6.5-1.5.4-2.2-.2-.5-.6-.4-1.6.2-2l12.6-10-12.6-10c-.6-.5-.7-1.5-.2-2s1.5-.7 2.2-.2L16 21z"
                />
              </svg>
            </div>
            <div
              className="dr-t"
            >
              General Request
            </div>
            <div
              className="dr-st"
            >
              <span
                className="t--info"
                style={
                  Object {
                    "fontStyle": "normal",
                    "textTransform": "none",
                  }
                }
              >
                
              </span>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering some suggested summaries 1`] = `
<div>
  <div
    className="p-a300 p-a800--xl"
    style={
      Object {
        "paddingBottom": ".75rem",
      }
    }
  >
    <div
      className="sh sh--y"
    >
      <h1
        className="sh-title"
      >
        BOS:311 — Choose a Service
      </h1>
    </div>
    <div
      className="m-v500 t--intro"
    >
      “
      Thanos is attacking
      ”
    </div>
  </div>
  <div
    className="b b--g p-a300 p-a800--xl"
  >
    <div>
      <div
        className="t--info"
      >
        We’ve matched these services to your request. Pick one to continue.
      </div>
      <div
        className="m-v500"
      >
        <div
          className="dr"
        >
          <a
            className="dr-h"
            href="/request/CSMCINC"
            onClick={[Function]}
          >
            <div
              className="dr-ic"
              style={
                Object {
                  "transform": "translateY(-49%) rotateZ(-90deg)",
                }
              }
            >
              <svg
                viewBox="-2 8.5 18 25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className="dr-i"
                  d="M16 21L.5 33.2c-.6.5-1.5.4-2.2-.2-.5-.6-.4-1.6.2-2l12.6-10-12.6-10c-.6-.5-.7-1.5-.2-2s1.5-.7 2.2-.2L16 21z"
                />
              </svg>
            </div>
            <div
              className="dr-t"
            >
              Cosmic Incursion
            </div>
            <div
              className="dr-st"
            >
              <span
                className="t--info"
                style={
                  Object {
                    "fontStyle": "normal",
                    "textTransform": "none",
                  }
                }
              >
                Something is threatening the fabric of the universe
              </span>
            </div>
          </a>
        </div>
      </div>
      <div
        className="t--info m-v300"
      >
        If none of those seem like a good fit, you can submit a General Request.
      </div>
      <div
        className="m-v500"
      >
        <div
          className="dr"
        >
          <a
            className="dr-h"
            href="/request/BOS311GEN"
            onClick={[Function]}
          >
            <div
              className="dr-ic"
              style={
                Object {
                  "transform": "translateY(-49%) rotateZ(-90deg)",
                }
              }
            >
              <svg
                viewBox="-2 8.5 18 25"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  className="dr-i"
                  d="M16 21L.5 33.2c-.6.5-1.5.4-2.2-.2-.5-.6-.4-1.6.2-2l12.6-10-12.6-10c-.6-.5-.7-1.5-.2-2s1.5-.7 2.2-.2L16 21z"
                />
              </svg>
            </div>
            <div
              className="dr-t"
            >
              General Request
            </div>
            <div
              className="dr-st"
            >
              <span
                className="t--info"
                style={
                  Object {
                    "fontStyle": "normal",
                    "textTransform": "none",
                  }
                }
              >
                
              </span>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
